fixes ALI-32: Adjusted the paths to match my routes in swagger documentation
